add actual instagram feed and favicon

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -5,3 +5,4 @@ logo:
 newsletter:
   title: Subscribe to my newsletter
   description: Get the latest blog posts and updates. (I promise not to spam!)
+instagram_feed_title: Latest Instagram Posts
