add popup newsletter

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -4,5 +4,5 @@ logo:
   footer: "/uploads/logo@2x.png"
 newsletter:
   title: Subscribe to my newsletter
-  description: Get the latest blog posts and updates. (I promise not to spam!)
+  description: Keep up with the latest blog posts and daily motivational quotes.
 instagram_feed_title: Latest Instagram Posts
