--- a/_data/general.yml
+++ b/_data/general.yml
@@ -6,3 +6,4 @@ newsletter:
   title: Subscribe to my newsletter
   description: Keep up with the latest blog posts and daily motivational quotes.
 instagram_feed_title: Latest Instagram Posts
+adsense_code:
