--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Active Minds Yearn
-description: >
-
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://activemindsyearn.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
