--- a/_data/social_media.yml
+++ b/_data/social_media.yml
@@ -1,6 +1,6 @@
 ---
 - type: Email
-  url: ''
+  url: 'email@example.com'
 - type: Instagram
   url: https://www.instagram.com/activemindsyearn
 - type: Twitter
