add analytics code

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -7,5 +7,5 @@ newsletter:
   title: Subscribe to my newsletter
   description: Keep up with the latest blog posts and daily motivational quotes.
 instagram_feed_title: Latest Instagram Posts
-adsense_header_code: ''
-adsense_ad_code: ''
+adsense_header_code:
+adsense_ad_code:
